# P_Python_for_Data_Science

./: README.md
00 - Starting/ex00/: Hello.py
00 - Starting/ex01/: format_ft_time.py
00 - Starting/ex02/: find_ft_type.py  tester.py
00 - Starting/ex03/: NULL_not_found.py  tester.py
00 - Starting/ex04/: whatis.py
00 - Starting/ex05/: building.py
00 - Starting/ex06/: filterstring.py  ft_filter.py
00 - Starting/ex07/: sos.py
00 - Starting/ex08/: Loading.py  tester.py
00 - Starting/ex09/: LICENSE  README.md  pyproject.toml
00 - Starting/ex09/ft_package/: __init__.py  count_in_list.py
00 - Starting/ex09/tests/: test_main.py
01 - Array/ex00/: give_bmi.py  tester.py
01 - Array/ex01/: array2D.py  tester.py
01 - Array/ex02/: load_image.py  tester.py
01 - Array/ex03/: load_image.py  zoom.py
01 - Array/ex04/: load_image.py  rotate.py
01 - Array/ex05/: pimp_image.py
02 - DataTable/ex00/: load_csv.py
02 - DataTable/ex01/: aff_life.py  load_csv.py
02 - DataTable/ex02/: aff_pop.py
02 - DataTable/ex03/: projection_life.py
03 - OOP/ex00/: tester.py
03 - OOP/ex01/: S1E9.py  tester.py
03 - OOP/ex02/: DiamondTrap.py  S1E7.py  tester.py
03 - OOP/ex03/: ft_calculator.py  tester.py
03 - OOP/ex04/: ft_calculator.py  tester.py
04 - DOD/ex00/: statistics.py
04 - DOD/ex01/: in_out.py
04 - DOD/ex02/: callLimit.py
04 - DOD/ex03/: new_student.py
04 - Dod/ex00/: statistics.py  tester.py
04 - Dod/ex01/: in_out.py  tester.py
04 - Dod/ex02/: tester.py
04 - Dod/ex03/: new_student.py  tester.py
