[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
authors = [
    { name="eagle", email="eagle@42.fr" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
keywords = ["example", "package", "exercise"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/eagle/ft_package"
